modules/grammars/ide/src/test/resources/cocos/valid/ConfigurationOrderConfiguration.ide
package valid

typedef component configuration ConfigurationOrderConfiguration {
    label "Some Configuration"

    backend task main
}
