modules/grammars/ide/src/test/resources/cocos/invalid/CircularDependencyTaskComponent.ide
package invalid

typedef component configuration CircularDependencyTaskComponent {
    label "Some Configuration"

    frontend task main
}
